--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="0_displaySettings.js"></script><!-- Back-end -->
   <script src="z_initialisation.js"></script>  
   <script src="z_ModelLoader.js"></script>
-
+  <script src="sand_simulation.js"></script>
    <script src="1Draw_hands.js"></script> <!--CHANGE THIS ONE -->
    
 </head>
