--- a/FaceTracker.html
+++ b/FaceTracker.html
@@ -17,8 +17,8 @@
     <script src="0_displaySettings.js"></script><!-- Back-end -->
   <script src="z_initialisation.js"></script>  
   <script src="z_ModelLoader.js"></script>
-
-   <script src="2Draw_faces.js"></script> <!--CHANGE THIS ONE -->
+  <script src="sand_simulation.js"></script>
+   <script src="2Draw_facesUX.js"></script> <!--CHANGE THIS ONE -->
    
 </head>
 
